Fixed detail modal z-index

--- a/react-recipes/src/RecipeDetails/RecipeDetails.css
+++ b/react-recipes/src/RecipeDetails/RecipeDetails.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .recipe-details-container {
